--- a/ProductStore/ProductStore.csproj
+++ b/ProductStore/ProductStore.csproj
@@ -163,6 +163,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Dropdown.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
@@ -176,7 +177,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="WebForm1.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Product\ProductDetails.aspx" />
     <Content Include="Product\Products.aspx" />
@@ -236,7 +236,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interface\IExceptionHandling.cs" />
     <Compile Include="Models\CategoryDetails.cs" />
+    <Compile Include="Models\ErrorModel.cs" />
     <Compile Include="Models\ProductDetails.cs" />
     <Compile Include="Models\ProductSearch.cs" />
     <Compile Include="Product\ProductDetails.aspx.cs">
@@ -269,20 +271,14 @@
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="Utility\APIAccess.cs" />
-    <Compile Include="Utility\IAPIAccess.cs" />
+    <Compile Include="Interface\IAPIAccess.cs" />
+    <Compile Include="Utility\ExceptionHandling.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
-    </Compile>
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
