--- a/ProductStore/Web.config
+++ b/ProductStore/Web.config
@@ -21,7 +21,7 @@
     </pages>
   </system.web>
   <appSettings>
-    <add key="APIServerName" value="localhost:44348" />
+    <add key="APIServerName" value="https://localhost:44348" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
@@ -65,4 +65,10 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+  <defaultDocument>
+    <files>
+      <clear />
+      <add value="Product/Products.aspx" />
+    </files>
+  </defaultDocument>
   </system.webServer></configuration>
