--- a/ProductStore/packages.config
+++ b/ProductStore/packages.config
@@ -27,8 +27,8 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Unity" version="5.11.7" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.6" targetFramework="net472" />
-  <package id="Unity.AspNet.WebApi" version="5.11.2" targetFramework="net472" />
   <package id="Unity.Container" version="5.11.8" targetFramework="net472" />
+  <package id="Unity.WebForms" version="1.4.0.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
